--- a/src/main/resources/templates/inventory/index.html
+++ b/src/main/resources/templates/inventory/index.html
@@ -67,6 +67,13 @@
                         </form>
                         <div class="row">
                             <div class="col-lg-12">
+                                <left>
+                                <a th:href="@{/inventory/add.html}"><button type="button" class="btn btn-primary"><i class="fa fa-plus-circle" aria-hidden="true"></i>CREATE NEW</button></a>
+                                </left>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-lg-12">
                                 <div class="col-lg-10">
 
                                 </div>
