--- a/src/main/resources/templates/invoice/list.html
+++ b/src/main/resources/templates/invoice/list.html
@@ -41,11 +41,9 @@
                                     </div>
                                     <div class="col-lg-5">
                                         <div class="input-mark-inner mg-b-22">
-                                            <div class="form-group row">
                                                 <div class="col-10">
                                                     <input class="form-control" type="date"  th:field="*{toDate}">
                                                 </div>
-                                            </div>
                                         </div>
                                     </div>
                                 </div>
@@ -103,6 +101,8 @@
                                             <div class="btn-group project-list-action">
                                                 <a th:href="@{'/admin/invoice/edit.html?status=1&id=' + ${invoice.getInvoiceId()}}"> <button class="btn btn-white btn-xs"><i class="fa fa-check"></i> Delivered</button></a>
                                                 <a th:href="@{'/admin/invoice/edit.html?status=2&id=' + ${invoice.getInvoiceId()}}"> <button class="btn btn-white btn-xs"><i class="fa fa-ban"></i> Cancel</button></a>
+                                                <a th:href="@{'/admin/invoice/print.html/'+ ${invoice.getInvoiceId()}}"> <button class="btn btn-white btn-xs"><i class="fa fa-print"></i> Print</button></a>
+
                                             </div>
                                         </td>
 
