--- a/src/main/resources/templates/admin/add.html
+++ b/src/main/resources/templates/admin/add.html
@@ -61,7 +61,7 @@
                                                         <label class="login2 pull-right pull-right-pro">PassWord</label>
                                                     </div>
                                                     <div class="col-lg-7">
-                                                        <input type="text" id="price" th:field="*{pojo.password}" class="form-control" name="password" />
+                                                        <input type="password" id="price" th:field="*{pojo.password}" class="form-control" name="password" />
                                                         <input type="checkbox" onclick="myFunction()">Show Password
                                                     </div>
                                                 </div>
