--- a/src/main/resources/templates/invoice/index.html
+++ b/src/main/resources/templates/invoice/index.html
@@ -114,7 +114,7 @@
                                                 <td th:text="${product.amountTotal}"></td>
                                                 <td>
                                                     <div class="btn-group project-list-action">
-                                                        <a th:href="@{'/product/detail/' + ${product.getProductId()}}"> <i class="fa fa-apple"></i> Detail</a>
+                                                        <a th:href="@{'/invoice/product/detail/' + ${product.getProductId()}}"> <i class="fa fa-apple"></i> Detail</a>
                                                     </div>
                                                 </td>
 
