--- a/src/main/resources/templates/role/index.html
+++ b/src/main/resources/templates/role/index.html
@@ -18,7 +18,7 @@
                             <div class="main-sparkline13-hd">
                                 <h1>Role<span class="table-project-n"></span> Table</h1>
                                 <div class="sparkline13-outline-icon">
-                                    <a th:href="@{/admin/role/add.html}"><button type="button" class="btn btn-primary"><i class="fa fa-plus-circle" aria-hidden="true"></i>CREATE NEW</button></a>
+<!--                                    <a th:href="@{/admin/role/add.html}"><button type="button" class="btn btn-primary"><i class="fa fa-plus-circle" aria-hidden="true"></i>CREATE NEW</button></a>-->
                                 </div>
                             </div>
                         </div>
