--- a/src/main/resources/templates/Chart/doanhthutheonhanvien.html
+++ b/src/main/resources/templates/Chart/doanhthutheonhanvien.html
@@ -3,7 +3,7 @@
 >
 <head>
     <th:block th:replace="/flagments/header::header">
-        <title>Chart</title>
+        <title>Thống kê doanh thu theo nhân viên</title>
     </th:block>
 
 </head>
