--- a/src/main/resources/templates/flagments/sidebar.html
+++ b/src/main/resources/templates/flagments/sidebar.html
@@ -23,13 +23,15 @@
                                         </li>
                                         <li sec:authorize="hasAuthority('admin')" class="nav-item"><a th:href="@{/admin/employee.html}" class="nav-link">Employee</a>
                                         </li>
-                                        <li class="nav-item"><a th:href="@{/category/index.html}" class="nav-link">Category</a>
+                                        <li sec:authorize="hasAuthority('staff')" class="nav-item"><a th:href="@{/category/index.html}" class="nav-link">Category</a>
                                         </li>
-                                        <li class="nav-item"><a th:href="@{/product/index.html}" class="nav-link">Product</a>
+                                        <li sec:authorize="hasAuthority('staff')" class="nav-item"><a th:href="@{/product/index.html}" class="nav-link">Product</a>
                                         </li>
-                                        <li class="nav-item"><a th:href="@{/supplier/index.html}" class="nav-link">Supplier</a>
+                                        <li sec:authorize="hasAuthority('staff')" class="nav-item"><a th:href="@{/supplier/index.html}" class="nav-link">Supplier</a>
                                         </li>
                                         <li sec:authorize="hasAuthority('seller')" class="nav-item"><a th:href="@{/invoice/add.html}" class="nav-link">Order</a>
+                                        </li>
+                                        <li sec:authorize="hasAuthority('admin')" class="nav-item"><a th:href="@{/admin/invoice/search.html}" class="nav-link">List order</a>
                                         </li>
 
                                         <li sec:authorize="hasAuthority('staff')" class="nav-item"><a th:href="@{/inventory/index.html}" class="nav-link">Recevie</a>
@@ -37,13 +39,12 @@
                                         <li sec:authorize="hasAuthority('admin')" class="nav-item dropdown">
                                             <a href="#" data-toggle="dropdown" role="button" aria-expanded="false" class="nav-link dropdown-toggle">Report <span class="angle-down-topmenu"><i class="fa fa-angle-down"></i></span></a>
                                             <div role="menu" class="dropdown-menu animated flipInX">
-                                                <a th:href="@{/category/index.html}" class="dropdown-item">revenue by month</a>
-                                                <a th:href="@{/category/index.html}" class="dropdown-item">revenue by employee</a>
+                                                <a th:href="@{/admin/statistical}" class="dropdown-item">revenue by month</a>
+                                                <a th:href="@{/admin/statistical/employee}" class="dropdown-item">revenue by employee</a>
                                                 <a th:href="@{/admin/invoice/report.html}" class="dropdown-item">invoice by month</a>
                                             </div>
                                         </li>
-                                        <li class="nav-item"><a href="#" class="nav-link">Support</a>
-                                        </li>
+
                                     </ul>
                                 </div>
                             </div>
