--- a/src/main/resources/templates/inventory/detail.html
+++ b/src/main/resources/templates/inventory/detail.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <th:block th:replace="/flagments/header::header">
-        <title>Role</title>
+        <title>Detail</title>
     </th:block>
 </head>
 <body class="materialdesign">
