--- a/src/main/resources/templates/supplier/edit.html
+++ b/src/main/resources/templates/supplier/edit.html
@@ -3,7 +3,7 @@
 >
 <head>
     <th:block th:replace="/flagments/header::header">
-        <title>Add Supplier</title>
+        <title>Edit Supplier</title>
     </th:block>
 </head>
 <body class="materialdesign">
@@ -16,7 +16,7 @@
                 <div class="sparkline12-list shadow-reset mg-t-30">
                     <div class="sparkline12-hd">
                         <div class="main-sparkline12-hd">
-                            <h1>Add category</h1>
+                            <h1>Edit supplier</h1>
                             <div class="sparkline12-outline-icon">
                                 <span class="sparkline12-collapse-link"><i class="fa fa-chevron-up"></i></span>
                                 <span><i class="fa fa-wrench"></i></span>
