--- a/src/main/resources/templates/supplier/index.html
+++ b/src/main/resources/templates/supplier/index.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <th:block th:replace="/flagments/header::header">
-        <title>Category</title>
+        <title>Supplier</title>
     </th:block>
 </head>
 <body class="materialdesign">
@@ -16,7 +16,7 @@
                     <div class="sparkline13-list shadow-reset">
                         <div class="sparkline13-hd">
                             <div class="main-sparkline13-hd">
-                                <h1>Category<span class="table-project-n"></span> Table</h1>
+                                <h1>Supplier<span class="table-project-n"></span> Table</h1>
                                 <div class="sparkline13-outline-icon">
                                     <a th:href="@{/supplier/add.html}"><button type="button" class="btn btn-primary"><i class="fa fa-plus-circle" aria-hidden="true"></i>CREATE NEW</button></a>
                                 </div>
