--- a/src/main/resources/templates/product/edit.html
+++ b/src/main/resources/templates/product/edit.html
@@ -16,7 +16,7 @@
                 <div class="sparkline12-list shadow-reset mg-t-30">
                     <div class="sparkline12-hd">
                         <div class="main-sparkline12-hd">
-                            <h1>Add category</h1>
+                            <h1>Edit product</h1>
                             <div class="sparkline12-outline-icon">
                                 <span class="sparkline12-collapse-link"><i class="fa fa-chevron-up"></i></span>
                                 <span><i class="fa fa-wrench"></i></span>
@@ -63,17 +63,17 @@
                                                     </div>
                                                 </div>
                                             </div>
-                                            <div class="form-group-inner">
-                                                <div class="row">
-                                                    <div class="col-lg-3">
-                                                        <label class="login2 pull-right pull-right-pro">Price</label>
-                                                    </div>
-                                                    <div class="col-lg-9">
-                                                        <input type="text" id="price" th:field="*{price}" class="form-control" name="price" />
-                                                        <span th:if="${#fields.hasErrors('price')}" th:errors="*{price}" class="badge badge-danger left"></span>
-                                                    </div>
-                                                </div>
-                                            </div>
+<!--                                            <div class="form-group-inner">-->
+<!--                                                <div class="row">-->
+<!--                                                    <div class="col-lg-3">-->
+<!--                                                        <label class="login2 pull-right pull-right-pro">Price</label>-->
+<!--                                                    </div>-->
+<!--                                                    <div class="col-lg-9">-->
+<!--                                                        <input type="text" id="price" th:field="*{price}" class="form-control" name="price" />-->
+<!--                                                        <span th:if="${#fields.hasErrors('price')}" th:errors="*{price}" class="badge badge-danger left"></span>-->
+<!--                                                    </div>-->
+<!--                                                </div>-->
+<!--                                            </div>-->
                                             <div class="form-group-inner">
                                                 <div class="row">
                                                     <div class="col-lg-3">
@@ -85,17 +85,17 @@
                                                     </div>
                                                 </div>
                                             </div>
-                                            <div class="form-group-inner">
-                                                <div class="row">
-                                                    <div class="col-lg-3">
-                                                        <label class="login2 pull-right pull-right-pro">Amount total</label>
-                                                    </div>
-                                                    <div class="col-lg-9">
-                                                        <input type="text" id="amountTotal" th:field="*{amountTotal}" class="form-control" name="amountTotal" />
-                                                        <span th:if="${#fields.hasErrors('amountTotal')}" th:errors="*{amountTotal}" class="badge badge-danger left"></span>
-                                                    </div>
-                                                </div>
-                                            </div>
+<!--                                            <div class="form-group-inner">-->
+<!--                                                <div class="row">-->
+<!--                                                    <div class="col-lg-3">-->
+<!--                                                        <label class="login2 pull-right pull-right-pro">Amount total</label>-->
+<!--                                                    </div>-->
+<!--                                                    <div class="col-lg-9">-->
+<!--                                                        <input type="text" id="amountTotal" th:field="*{amountTotal}" class="form-control" name="amountTotal" />-->
+<!--                                                        <span th:if="${#fields.hasErrors('amountTotal')}" th:errors="*{amountTotal}" class="badge badge-danger left"></span>-->
+<!--                                                    </div>-->
+<!--                                                </div>-->
+<!--                                            </div>-->
                                             <div class="form-group-inner">
                                                 <div class="row">
                                                     <div class="col-lg-3">
