--- a/src/main/resources/templates/supplier/add.html
+++ b/src/main/resources/templates/supplier/add.html
@@ -16,7 +16,7 @@
                 <div class="sparkline12-list shadow-reset mg-t-30">
                     <div class="sparkline12-hd">
                         <div class="main-sparkline12-hd">
-                            <h1>Add category</h1>
+                            <h1>Add Supplier</h1>
                             <div class="sparkline12-outline-icon">
                                 <span class="sparkline12-collapse-link"><i class="fa fa-chevron-up"></i></span>
                                 <span><i class="fa fa-wrench"></i></span>
