--- a/src/main/resources/templates/Chart/doanhthutheonhanvien.html
+++ b/src/main/resources/templates/Chart/doanhthutheonhanvien.html
@@ -28,7 +28,7 @@
                     <div class="row">
                         <br/>
                         <div class="col-lg-12">
-                            <form action="#" th:action="@{/statistical/employee}" th:object="${thongkenhanvien}" method="get"
+                            <form action="#" th:action="@{/admin/statistical/employee}" th:object="${thongkenhanvien}" method="get"
                                   id="formData">
 
                                 <div class="form-group-inner">
