--- a/src/main/resources/templates/invoice/index.html
+++ b/src/main/resources/templates/invoice/index.html
@@ -27,7 +27,7 @@
                                     </div>
                                     <div class="col-lg-5">
                                         <div class="input-mark-inner mg-b-22">
-                                            <input type="text" id="name" th:field="*{consumer.name}" class="form-control" name="name" />
+                                            <input type="text" id="name" th:field="*{consumer.name}" class="form-control" name="name" required="required"/>
                                         </div>
                                     </div>
                                 </div>
@@ -39,7 +39,7 @@
                                     </div>
                                     <div class="col-lg-5">
                                         <div class="input-mark-inner mg-b-22">
-                                            <input type="text" id="address" th:field="*{consumer.address}" class="form-control" name="address" />
+                                            <input type="text" id="address" th:field="*{consumer.address}" class="form-control" name="address" required="required"/>
                                         </div>
                                     </div>
                                 </div>
@@ -51,7 +51,7 @@
                                     </div>
                                     <div class="col-lg-5">
                                         <div class="input-mark-inner mg-b-22">
-                                            <input type="text" id="phoneNumber" th:field="*{consumer.phoneNumber}" class="form-control" name="phoneNumber" />
+                                            <input type="text" id="phoneNumber" th:field="*{consumer.phoneNumber}" class="form-control" name="phoneNumber" required="required"/>
                                         </div>
                                     </div>
                                 </div>
@@ -63,7 +63,7 @@
                                     </div>
                                     <div class="col-lg-5">
                                         <div class="input-mark-inner mg-b-22">
-                                            <input type="text" id="email" th:field="*{consumer.email}" class="form-control" name="email" />
+                                            <input type="text" id="email" th:field="*{consumer.email}" class="form-control" name="email" required="required"/>
                                         </div>
                                     </div>
                                 </div>
