--- a/src/main/resources/templates/invoice/list.html
+++ b/src/main/resources/templates/invoice/list.html
@@ -76,6 +76,8 @@
                                     <tr>
                                         <th data-checkbox="true"></th>
                                         <th data-field="name" >Name</th>
+                                        <th data-field="name" >Created date</th>
+
                                         <th data-field="address" >Address</th>
                                         <th data-field="phone" >Phone</th>
                                         <th data-field="email" >Email</th>
@@ -89,6 +91,8 @@
                                         <td></td>
                                         <td th:text="${invoice.getConsumer().getName()}">name</td>
                                         <td th:text="${invoice.getConsumer().getPhoneNumber()}">phone</td>
+                                        <td th:text="${#dates.format(invoice.createDate, 'dd-MMM-yyyy')}">Created Date
+                                        </td>
                                         <td th:text="${invoice.getConsumer().getAddress()}">address</td>
                                         <td th:text="${invoice.getConsumer().getEmail()}">email</td>
                                         <td th:text="${invoice.getEmployee().getName()}">empl</td>
