--- a/src/main/resources/templates/admin/edit.html
+++ b/src/main/resources/templates/admin/edit.html
@@ -62,7 +62,7 @@
                                                         <label class="login2 pull-right pull-right-pro">PassWord</label>
                                                     </div>
                                                     <div class="col-lg-7">
-                                                        <input type="password" id="password" th:field="*{pojo.password}" class="form-control" name="password" required="required" />
+                                                        <input type="password" id="password" th:field="*{pojo.password}" class="form-control" name="password"  />
                                                         <input type="checkbox" onclick="myFunction()">Show Password
                                                     </div>
                                                 </div>
